tests/ui/macros/issue-105225.stderr
error: argument is a duplicate of an inline argument
  --> $DIR/issue-105225.rs:3:21
   |
LL |     println!("{x}", x);
   |              -----  ^ argument is a duplicate of an inline argument
   |              |
   |              formatting specifier missing

error: aborting due to previous error

