tests/ui/macros/issue-105225.rs
fn main() {
    let x = 10;
    println!("{x}", x);
    //~^ ERROR argument is a duplicate of an inline argument
}
